# nyccamera

./: .env.example  .gitignore  README.md  SETUP_SNOWFLAKE.sql  ai_sql_functions.sql  create_semantic_view.sql  generate_pdf.py  geospatial_functions.sql  main.py  nativeapp.py  nyc_camera_analytics.ipynb  nyc_camera_main.py  nyc_camera_semantic_view.yaml  nyc_camera_sensor.py  nyc_environmental_analysis.ipynb  nyc_traffic_analytics.ipynb  nyc_traffic_events_sensor.py  postgresql_client.py  pyproject.toml  requirements.txt  run.md  run.sh  run_nyc_camera.sh  runsetup.sh  semantic_views.sql  setup_tables.py  slack_notifier.py  snowflake_config.example.json  snowflake_jwt_auth.py  snowpipe_streaming_client.py  sql_semantic_views.sql  streamlit_app.py  traffic_dashboard.py
src/nyc_traffic_intelligence/: __init__.py  config.py  sensors.py  streaming.py
